--- a/app/src/main/res/layout/app_main.xml
+++ b/app/src/main/res/layout/app_main.xml
@@ -5,7 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-
+    <ImageView
+        android:background="@android:color/holo_red_dark"
+        android:id="@+id/moudle_a"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true" />
     <!--<TextView
         android:id="@+id/moudle_a"
         android:layout_width="wrap_content"
