--- a/app/src/main/res/layout/app.xml
+++ b/app/src/main/res/layout/app.xml
@@ -2,13 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--<fragment
-    android:id="@+id/mine"
-    android:name="com.lantel.mine.MineFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>-->
+
     <fragment
         android:id="@+id/my_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
