1.名单整体模块布局骨架搭建

--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -4,4 +4,21 @@
     <dimen name="big_circle_radius">40dp</dimen>
     <dimen name="small_circle_radius">20dp</dimen>
     <dimen name="min_gap">80dp</dimen>
+
+    <!--左右小图标宽高，左右边距，顶部边距-->
+    <dimen name="statebar_height">24dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="top_img_width">24dp</dimen>
+    <dimen name="top_img_height">24dp</dimen>
+    <dimen name="top_img_marginHorizontal">19dp</dimen>
+    <dimen name="top_img_margin_top">34dp</dimen>
+
+    <!--消息红点，大小，边距-->
+    <dimen name="redpoint_radis">4dp</dimen>
+    <dimen name="top_redpointmarginLeft">39dp</dimen>
+    <dimen name="top_redpointmarginTop">16dp</dimen>
+
+
+    <!--顶部标题-->
+    <dimen name="top_title">18sp</dimen>
 </resources>
