--- a/common/src/main/res/layout/layout_toolbar.xml
+++ b/common/src/main/res/layout/layout_toolbar.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
     <View
         android:id="@+id/statebarView"
         android:layout_width="match_parent"
@@ -53,7 +54,6 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="@string/top_title"
                 android:textColor="@color/white"
                 android:textSize="@dimen/top_title"
                 app:layout_constraintBottom_toBottomOf="parent"
