--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -7,4 +7,10 @@
         <attr name="gap_between_menu_fab" format="dimension" />
         <attr name="menu_drawable" format="reference" />
     </declare-styleable>
+
+
+    <declare-styleable name="TabhostView">
+            <attr name="entries" format="reference"/>
+    </declare-styleable>
+
 </resources>
