--- a/component_list/src/main/res/layout/layout_tabt_item.xml
+++ b/component_list/src/main/res/layout/layout_tabt_item.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/home_menu_item_height"
+    android:layout_height="80dp"
     android:background="?attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-       <ImageView
-        android:layout_gravity=""
-        android:id="@+id/home_menu_icon"
-        android:src="@mipmap/homework"
-        android:layout_width="@dimen/home_menu_img_width"
-        android:layout_height="@dimen/home_menu_img_height"
+    <TextView
+        android:id="@+id/text_high"
+        android:text="@string/default_count"
+        android:textSize="@dimen/list_top_higher"
+        android:textColor="@color/list_top_higher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/home_menu_img_marginBottom"/>
+        />
 
     <TextView
-        android:gravity="center_horizontal"
-        android:id="@+id/home_menu_text"
+        android:id="@+id/text_below"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="12"
-        android:textSize="@dimen/home_menu_text"
-        android:textColor="@color/home_menu_text"
+        android:textSize="@dimen/list_top_below"
+        android:textColor="@color/list_top_below"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_menu_icon"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/text_high"
+        android:layout_marginTop="@dimen/list_toptText_margin"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
