--- a/component_list/src/main/res/layout/filter_list.xml
+++ b/component_list/src/main/res/layout/filter_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/list_drawerLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,11 +13,12 @@
             android:id="@+id/toolbar_lay"
             app:layout_constraintTop_toTopOf="parent"
             />
-
+       <!-- overScrollMode="never取消滑动至边界的波浪-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/top_tab"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="@dimen/top_tab_height"
             app:layout_constraintTop_toBottomOf="@id/toolbar_lay">
         </androidx.recyclerview.widget.RecyclerView>
 
