--- a/app/src/main/res/layout/mine_top_personal_mess.xml
+++ b/app/src/main/res/layout/mine_top_personal_mess.xml
@@ -10,8 +10,8 @@
         android:id="@+id/top_bg_img_blue"
         android:layout_width="0dp"
         android:layout_height="@dimen/mine_head_bg_blue"
-        android:background="@mipmap/my_head_top_blue"
-        android:scaleType="centerCrop"
+        android:src="@mipmap/my_head_top_blue"
+        android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
