--- a/component_list/src/main/res/layout/layout_tabt_item.xml
+++ b/component_list/src/main/res/layout/layout_tabt_item.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="match_parent"
     android:background="?attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/text_high"
-        android:text="@string/default_count"
-        android:textSize="@dimen/list_top_higher"
-        android:textColor="@color/list_top_higher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/text_below"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/list_top_below"
-        android:textColor="@color/list_top_below"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_high"
-        android:layout_marginTop="@dimen/list_toptText_margin"
-        />
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/text_high"
+            android:text="@string/default_count"
+            android:textSize="@dimen/list_top_higher"
+            android:textColor="@color/list_top_higher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            />
 
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/text_below"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/list_top_below"
+            android:textColor="@color/list_top_below"
+            />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
