--- a/component_list/src/main/res/values/arrays.xml
+++ b/component_list/src/main/res/values/arrays.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--市場名單標題-->
     <string-array name="tab_market_title" >
         <item>@string/all_list</item>
         <item>@string/wait_confirm</item>
         <item>@string/finished</item>
         <item>@string/not_finish_yet</item>
+    </string-array>
+
+    <!--客户跟单標題-->
+    <string-array name="custom_title" >
+        <item>@string/all_list</item>
+        <item>@string/not_coming_door</item>
+        <item>@string/auditioned</item>
+        <item>@string/has_visited</item>
+        <item>@string/finished</item>
     </string-array>
 </resources>
