--- a/component_list/src/main/res/values/colors.xml
+++ b/component_list/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="list_top_higher">#3E3E3E</color>
     <color name="list_top_below">#3B3B3B</color>
+    <color name="title_day">#3E3E3E</color>
+    <color name="list_img_text">@color/white</color>
 </resources>
