--- a/component_list/src/main/res/values/dimens.xml
+++ b/component_list/src/main/res/values/dimens.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--名单顶部tab属性-->
+    <dimen name="top_tab_height">60dp</dimen>
+
+    <!--列表日期项属性-->
+    <dimen name="title_day_margin">8dp</dimen>
     <dimen name="list_toptText_margin">5dp</dimen>
+    <dimen name="day_title_height">22dp</dimen>
+
+    <!--列表默认图片属性-->
+    <dimen name="list_item_height">80dp</dimen>
+    <dimen name="list_img_text">19sp</dimen>
+    <dimen name="list_img_marginLeft">20dp</dimen>
+    <dimen name="list_img_size">40dp</dimen>
+   <!-- =================================================字体========================================================-->
+    <!--列表日期项属性-->
+    <dimen name="title_day">13sp</dimen>
+    <!--名单顶部tab属性-->
     <dimen name="list_top_higher">14sp</dimen>
     <dimen name="list_top_below">11sp</dimen>
+
+
 </resources>
