--- a/component_list/src/main/res/layout/filter_list.xml
+++ b/component_list/src/main/res/layout/filter_list.xml
@@ -2,24 +2,82 @@
 <androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/list_drawerLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/match_wh"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/match_wh"
         >
         <include layout="@layout/layout_toolbar"
             android:id="@+id/toolbar_lay"
             app:layout_constraintTop_toTopOf="parent"
             />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_filter"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_lay"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/search_filter_height">
+            <ImageView
+                android:background="@color/colorPrimary"
+                android:src="@mipmap/ic_audio"
+                android:id="@+id/filter_drawer"
+                android:layout_width="@dimen/filter_img_width"
+                android:layout_height="@dimen/filter_img_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="@dimen/filter_img_margin_right"/>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/filter_drawer"
+                android:layout_marginLeft="@dimen/filter_search_marginLeft"
+                android:layout_marginRight="@dimen/filter_search_marginRight"
+               >
+                <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/search_layout"
+                    style="@style/match_wh_horizontal"
+                    >
+                    <androidx.appcompat.widget.SearchView
+                        android:imeOptions="actionSearch"
+                        android:layout_weight="1"
+                        style="@style/match_h_0_w"
+                        android:id="@+id/filter_edit"
+                        />
+
+                    <TextView
+                        android:id="@+id/search_txt"
+                        android:layout_gravity="right|center_vertical"
+                        android:text="@string/search"
+                        android:textSize="@dimen/search_txt"
+                        style="@style/wrap_wh" />
+                </LinearLayout>
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_gravity="center"
+                    android:id="@+id/search_btn"
+                    android:textSize="@dimen/search_btn"
+                    android:textColor="@color/search_btn"
+                    android:text="搜索姓名、手机号码"
+                    android:drawableLeft="@mipmap/ic_photo"
+                    android:layout_centerInParent="true"
+                    style="@style/wrap_wh" />
+            </FrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
        <!-- overScrollMode="never取消滑动至边界的波浪-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/top_tab"
             android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="@dimen/top_tab_height"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_lay">
+            app:layout_constraintTop_toBottomOf="@id/search_filter">
         </androidx.recyclerview.widget.RecyclerView>
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
@@ -30,29 +88,26 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 >
                 <androidx.recyclerview.widget.RecyclerView
-                    android:background="@color/colorPrimary"
                     android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@style/match_wh"
                     android:overScrollMode="never" />
             </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/colorPrimary"
         android:id="@+id/drawer"
-        android:layout_gravity="end"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        style="@style/match_wh_end">
+
         <LinearLayout
-            android:orientation="vertical"
-            app:layout_constraintWidth_percent="0.80"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            style="@style/match_h_0_w"
             android:background="@color/colorPrimary"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
-        </LinearLayout>
+            android:orientation="vertical"
+            app:layout_constraintWidth_percent="0.70"></LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
