--- a/component_list/src/main/res/layout/layout_tabt_item.xml
+++ b/component_list/src/main/res/layout/layout_tabt_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+   style="@style/match_wh"
     android:background="?attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -9,27 +8,22 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        style="@style/LineV_wrap_wh"
+        >
         <TextView
-            android:layout_gravity="center_horizontal"
             android:id="@+id/text_high"
             android:text="@string/default_count"
             android:textSize="@dimen/list_top_higher"
             android:textColor="@color/list_top_higher"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/centerH_wrap_wh"
             android:layout_marginBottom="10dp"
             />
 
         <TextView
-            android:layout_gravity="center_horizontal"
             android:id="@+id/text_below"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textSize="@dimen/list_top_below"
             android:textColor="@color/list_top_below"
+            style="@style/centerH_wrap_wh"
             />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
