--- a/common/src/main/res/layout/layout_toolbar.xml
+++ b/common/src/main/res/layout/layout_toolbar.xml
@@ -15,8 +15,6 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:contentInsetLeft="0dp"
-        app:contentInsetStart="0dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,17 +24,13 @@
                 android:id="@+id/top_img_left"
                 android:layout_width="@dimen/top_img_width"
                 android:layout_height="@dimen/top_img_height"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:id="@+id/top_redpoint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,6 +59,18 @@
                 android:id="@+id/top_img_right"
                 android:layout_width="@dimen/top_img_width"
                 android:layout_height="@dimen/top_img_width"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/top_txt_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/top_txt_right"
+                android:textColor="@color/top_txt_right"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
