--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="default_color">#02a6d8</color>
     <color name="default_color_dark">#52a6b8</color>
     <color name="color_red">#FF0000</color>
+
+
+    <color name="top_txt_right">#49a2f8</color>
+
+    <color name="edit_color">#00d16e</color>
+    <color name="edit_txt_color">#3e3e3e</color>
+    <color name="edit_tip_color">#a8a8a8</color>
 </resources>
